ended part 3 - continuing app dev
